--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@prisma/client": "^5.17.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -22,5 +23,8 @@
     "react-icons": "^4.11.0",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
