--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.17.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
