--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.17.0",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "next-images": "^1.8.5",
     "next-themes": "^0.2.1",
