--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
     "next": "13.4.19",
     "next-images": "^1.8.5",
     "next-themes": "^0.2.1",
