--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="file:./dev.db"
 JWT_SECRET=pwhLzBSNIIRZ2mOCKCemzZFEVPjhQqljUxeOhfV8LAQ
+MONGODB_URI=mongodb+srv://indmillr:Steve1wok!1235@tkd.cdez1mi.mongodb.net/?retryWrites=true&w=majority&appName=TKD
